--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Thymeleaf 예제</title>
 </head>
 <body>
-
+	<h1>Thymeleaf 예제</h1>
+	<span th:text="${user.name}"></span><br/>
+	<span th:text="${user.email}"></span><br/>
+	<span th:text="${user.createTime}"></span><br/>
 </body>
 </html>
