--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 	<h1>Thymeleaf 예제</h1>
-	<span th:text="${user.name}"></span><br/>
-	<span th:text="${user.email}"></span><br/>
-	<span th:text="${user.createTime}"></span><br/>
+	<span th:text="${list}"></span>
 </body>
 </html>
