--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -27,7 +27,7 @@
 					<td th:text="${list.id}"></td>
 					<td class="name" th:text="${list.name}"></td>
 					<td th:text="${list.email}"></td>
-					<td th:text="${#temporals.format(list.createTime, yyyy-MM-dd HH:mm:ss})"></td>
+					<td th:text="${list.createTime}"></td>
 				</tr>
 				<tr th:unless="${#lists.size(list)} > 0">
 					<td colspan="4">조회된 결과가 없습니다.</td>
