--- a/src/main/resources/templates/user/userList.html
+++ b/src/main/resources/templates/user/userList.html
@@ -34,7 +34,7 @@
 				</tr>
 			</tbody>
 		</table>
-		<a href="" class="btn">등록</a>
+		<a href="/register" id="btnSave">등록</a>
 	</div>
 </body>
 </html>
